refactor: Consolidate fine-grained repository ports and adapters into Aggregate Roots