@@ -3,11 +3,10 @@ package com.workspace.infrastructure.adapter.out.persistence.team;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import org.springframework.stereotype.Repository;
-
 import com.workspace.application.port.out.team.TeamRepositoryPort;
 import com.workspace.domain.model.team.Team;
+import com.workspace.domain.model.team.TeamMember;
 import lombok.RequiredArgsConstructor;
 
 @Repository
@@ -15,6 +14,7 @@ import lombok.RequiredArgsConstructor;
 public class TeamRepositoryAdapter implements TeamRepositoryPort {
 
     private final TeamJpaRepository teamJpaRepository;
+    private final TeamMemberJpaRepository teamMemberJpaRepository;
 
     @Override
     public Optional<Team> findById(UUID id) {
@@ -33,7 +33,7 @@ public class TeamRepositoryAdapter implements TeamRepositoryPort {
         return teamJpaRepository.findByWorkspaceId(workspaceId)
                 .stream()
                 .map(TeamMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -51,5 +51,51 @@ public class TeamRepositoryAdapter implements TeamRepositoryPort {
     @Override
     public void deleteById(UUID id) {
         teamJpaRepository.deleteById(id);
+    }
+
+    // TeamMember methods
+    @Override
+    public Optional<TeamMember> findMemberById(UUID id) {
+        return teamMemberJpaRepository.findById(id)
+                .map(TeamMemberMapper::toDomain);
+    }
+
+    @Override
+    public Optional<TeamMember> findMemberByTeamIdAndWorkspaceMemberId(UUID teamId, UUID workspaceMemberId) {
+        return teamMemberJpaRepository.findByTeamIdAndWorkspaceMemberId(teamId, workspaceMemberId)
+                .map(TeamMemberMapper::toDomain);
+    }
+
+    @Override
+    public List<TeamMember> findMembersByTeamId(UUID teamId) {
+        return teamMemberJpaRepository.findByTeamId(teamId)
+                .stream()
+                .map(TeamMemberMapper::toDomain)
+                .toList();
+    }
+
+    @Override
+    public List<TeamMember> findMembersByWorkspaceMemberId(UUID workspaceMemberId) {
+        return teamMemberJpaRepository.findByWorkspaceMemberId(workspaceMemberId)
+                .stream()
+                .map(TeamMemberMapper::toDomain)
+                .toList();
+    }
+
+    @Override
+    public TeamMember saveMember(TeamMember teamMember) {
+        TeamMemberEntity entity = TeamMemberMapper.toEntity(teamMember);
+        TeamMemberEntity savedEntity = teamMemberJpaRepository.save(entity);
+        return TeamMemberMapper.toDomain(savedEntity);
+    }
+
+    @Override
+    public boolean existsMemberByTeamIdAndWorkspaceMemberId(UUID teamId, UUID workspaceMemberId) {
+        return teamMemberJpaRepository.existsByTeamIdAndWorkspaceMemberId(teamId, workspaceMemberId);
+    }
+
+    @Override
+    public void deleteMemberById(UUID id) {
+        teamMemberJpaRepository.deleteById(id);
     }
 }
